Changes in version 2.12.0
-------------------------

NEW FEATURES

    o Added --num-eigen-vectors to PureCN.R to set the number of eigen vectors.
      Tuning parameter for coverage normalization. Default should in most cases
      be a good compromise between removing most normal noise and not
      overfitting to pool of normal samples.


Changes in version 2.10.0
-------------------------

NEW FEATURES
    o adjustLogRatio function for adjusting a tumor vs normal coverage
      ratio for purity and ploidy. Useful for downstream tools that
      expect ratios instead of absolute copy numbers such as GISTIC.
      Thanks @tedtoal (#40).

SIGNIFICANT USER-VISIBLE CHANGES

    o Provide interval-level likelihood scores in runAbsoluteCN return
      object. Thanks @tinyheero (#335).
    o Documentation updates. Thanks @ddrichel (#325).  

BUGFIXES

    o Bugfix #296 was not merged into the developer branch and did not make 
      it into 2.8.0.
    o Log ratios not shiften to median of sample medians as intended (#356).
      Thanks @sleyn.  
    o Fixed crash with small toy examples (fewer than 2000 baits, #363)  


Changes in version 2.8.0
------------------------

SIGNIFICANT USER-VISIBLE CHANGES

    o Make processMultipleSamples temporarily defunct because the 
      copynumber package was removed from Bioconductor
    o Make it possible to specify saveRDS version to make output files
      readable by old R versions prior to 3.6.0 (#255)  

BUGFIXES

    o Fixed an issue with callLOH and --model-homozygous (#254) 
    o Fixed crash when VCF contained NAs in base quality scores (#249)
    o Fixed wrong check for outdir write permissions in Coverage.R and
      NormalDB.R (#258) 
    o Fixed inverted return codes in couple of scripts (#284)  
    o Fixed an issue in callAlterations where the id argument was largely
      ignored (#292)
    o Fixed broken support for GenomicsDB-R from their developer branch 
      (#296)
    o Fixed crash in plotAbs (#260)   