@@ -23,6 +23,7 @@ export(filterVcfBasic)
 export(filterVcfMuTect)
 export(filterVcfMuTect2)
 export(findFocal)
+export(findHighQualitySNPs)
 export(getSexFromCoverage)
 export(getSexFromVcf)
 export(plotAbs)
