@@ -443,3 +443,50 @@ calculateMappingBiasGatk4 <- function(workspace, reference.genome,
     gr$clustered[idxa] <- TRUE
     return(gr)
 }
+
+#' Find High Quality SNPs
+#'
+#' Function to extract high quality SNPs from the mapping bias database.
+#' Useful for generating fingerprinting panels etc.
+#'
+#'
+#' @param mapping.bias.file Generated by \code{\link{calculateMappingBiasVcf}}.
+#' @param max.bias Maximum mapping bias
+#' @param min.pon Minimum number of normal samples, useful to get reliable
+#' mapping bias.
+#' @param triallelic By default, ignore positions with multiple alt alleles. 
+#' @param vcf.file Optional VCF file (for example dbSNP). Needs to be 
+#' bgzip and tabix processed.
+#' @param genome See \code{readVcf}
+#' @return A \code{GRanges} object with mapping bias passing filters. 
+#' If \code{vcf.file} is provided, it will be the variants in the
+#' corresponding file overlapping with the passed variants.
+#' @author Markus Riester
+#' @examples
+#'
+#' normal.panel.vcf <- system.file("extdata", "normalpanel.vcf.gz",
+#'     package = "PureCN")
+#' bias <- calculateMappingBiasVcf(normal.panel.vcf, genome = "h19")
+#'
+#' @export findHighQualitySNPs
+findHighQualitySNPs <- function(mapping.bias.file, max.bias = 0.2, min.pon = 2,
+                                triallelic = FALSE, vcf.file = NULL, genome) {
+    if (is(mapping.bias.file, "GRanges")) {
+        bias <- mapping.bias.file
+    } else {
+        bias <- readRDS(mapping.bias.file)
+    }    
+    bias <- bias[which(abs(bias$bias - 1) <= max.bias & (triallelic | !bias$triallelic) & bias$pon.count >= min.pon), ]
+    if (is.null(vcf.file)) return(bias)
+    vcfSeqStyle <- .getSeqlevelsStyle(headerTabix(
+        TabixFile(vcf.file))$seqnames)
+
+    biasRenamedSL <- bias
+    if (!length(intersect(seqlevelsStyle(bias), vcfSeqStyle))) {
+        seqlevelsStyle(biasRenamedSL) <- vcfSeqStyle[1]
+    }
+    flog.info("Reading VCF...")
+    vcf <- readVcf(vcf.file, genome = genome, ScanVcfParam(which = reduce(biasRenamedSL)))
+    ov <- findOverlaps(biasRenamedSL, vcf, type = "equal")
+    return(vcf[subjectHits(ov)]) 
+}
